--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
     "name": "azdsextns",
     "displayName": "Data Science Extensions",
-    "description": "\"Set of extensions use in Machine Learning, Azure ML and Python\"",
-    "version": "0.0.1",
+    "description": "Set of extensions use in Machine Learning, Azure ML and Python",
+    "version": "0.0.2",
     "publisher": "SunilYadav",
-    "author": {"name": "Sunil Yadav"},
+    "author": {
+        "name": "Sunil Yadav"
+    },
     "repository": {
         "type": "git",
         "url": "https://github.com/talk2sunil83/DataScienceExtensions"
@@ -29,27 +31,14 @@
         "KevinRose.vsc-python-indent",
         "McCarter.start-git-bash",
         "mechatroner.rainbow-csv",
-        "ms-azure-devops.azure-pipelines",
-        "ms-azuretools.vscode-azureappservice",
-        "ms-azuretools.vscode-azurefunctions",
-        "ms-azuretools.vscode-azureresourcegroups",
-        "ms-azuretools.vscode-azurestorage",
-        "ms-azuretools.vscode-azurevirtualmachines",
-        "ms-azuretools.vscode-cosmosdb",
-        "ms-azuretools.vscode-docker",
         "ms-python.python",
         "ms-python.vscode-pylance",
         "ms-toolsai.vscode-ai",
-        "ms-vscode-remote.remote-containers",
-        "ms-vscode-remote.remote-ssh",
         "ms-vscode-remote.remote-ssh-edit",
-        "ms-vscode-remote.remote-wsl",
         "ms-vscode-remote.vscode-remote-extensionpack",
         "ms-vscode.azure-account",
-        "ms-vscode.azurecli",
         "ms-vscode.vscode-node-azure-pack",
         "ms-vsts.team",
-        "msazurermtools.azurerm-vscode-tools",
         "oderwat.indent-rainbow",
         "pflannery.vscode-versionlens",
         "shardulm94.trailing-spaces",
