--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "azdsextns",
     "displayName": "Data Science Extensions",
-    "description": "Set of extensions use in Machine Learning, Azure ML and Python,and supporting tools",
-    "version": "0.0.6",
+    "description": "Set of extensions use in Machine Learning, Python,and supporting tools",
+    "version": "0.0.7",
     "publisher": "SunilYadav",
     "author": {
         "name": "Sunil Yadav"
@@ -26,42 +26,49 @@
         "Azure"
     ],
     "extensionPack": [
-        "christian-kohler.path-intellisense",
-        "CoenraadS.bracket-pair-colorizer",
+        "AkankshaSingh872.case-change",
         "CoenraadS.bracket-pair-colorizer-2",
-        "donjayamanne.githistory",
+        "DiogoNolasco.pyinit",
+        "Gruntfuggly.todo-tree",
+        "RandomFractalsInc.snippets-viewer",
+        "SeeLog.python-init-generator",
+        "TabNine.tabnine-vscode",
+        "VisualStudioExptTeam.vscodeintellicode",
+        "ZainChen.json",
+        "amirHA.better-comments-2",
+        "donjayamanne.python-environment-manager",
         "eamodio.gitlens",
-        "emilast.LogFileHighlighter",
+        "eg2.vscode-npm-script",
         "fabiospampinato.vscode-todo-plus",
-        "felipecaputo.git-project-manager",
-        "foxundermoon.shell-format",
-        "gruntfuggly.todo-tree",
-        "hediet.debug-visualizer",
-        "humao.rest-client",
-        "jgclark.vscode-todo-highlight",
-        "KevinRose.vsc-python-indent",
-        "McCarter.start-git-bash",
-        "mechatroner.rainbow-csv",
+        "formulahendry.code-runner",
+        "gnramsay.create-python-module",
+        "graykode.ai-docstring",
+        "himanoa.Python-autopep8",
+        "kaih2o.python-resource-monitor",
+        "mgesbert.python-path",
         "ms-python.python",
         "ms-python.vscode-pylance",
-        "ms-toolsai.vscode-ai",
-        "ms-vscode-remote.remote-ssh-edit",
-        "ms-vscode-remote.vscode-remote-extensionpack",
-        "ms-vscode.azure-account",
-        "ms-vscode.vscode-node-azure-pack",
-        "ms-vsts.team",
-        "njpwerner.autodocstring",
+        "ms-toolsai.jupyter",
+        "ms-toolsai.jupyter-renderers",
+        "ms-vscode.anycode",
+        "njqdev.vscode-python-typehint",
         "oderwat.indent-rainbow",
-        "pflannery.vscode-versionlens",
+        "patrick91.python-dependencies-vscode",
+        "pyDocGenAI.pyDocGenAI",
+        "quentinguidee.gitignore-ultimate",
+        "quicktype.quicktype",
+        "richie5um2.vscode-sort-json",
         "shardulm94.trailing-spaces",
         "sleistner.vscode-fileutils",
+        "sourcery.sourcery",
         "streetsidesoftware.code-spell-checker",
-        "Tino.simple-rest-client",
-        "VisualStudioExptTeam.vscodeintellicode",
-        "VisualStudioOnlineApplicationInsights.application-insights",
+        "tomoki1207.pdf",
+        "usernamehw.errorlens",
         "vscode-icons-team.vscode-icons",
-        "wayou.vscode-todo-highlight",
         "wwm.better-align",
-        "yzhang.markdown-all-in-one"
+        "yardensachs.copy-python-path",
+        "yzhang.dictionary-completion",
+        "zhaouv.vscode-python-highlight-cell-splitter",
+        "zijie.python-inline-repl"
     ]
 }
